# inferwall-bench

./: .gitignore  BENCHMARK.md  README.md  justfile  pyproject.toml
.github/workflows/: benchmark-smoke.yml  benchmark.yml
inferwall_bench/: __init__.py
results/: benchmark_report.md  combined_results.json
tests/benchmark/: datasets.py  generate_report.py  loaders.py  mutators.py  phi4_baseline.py  provenance.py  regression_baseline.json  robustness.py  run_benchmark.py  run_phi4_sampled.py  smoke.py  stats.py
tests/benchmark/data/: custom_test_set.jsonl  owasp_top10_test.jsonl  realistic_benign.jsonl  smoke_malicious.jsonl
