[project]
name = "inferwall-bench"
version = "0.1.0"
requires-python = ">=3.10"
description = "Benchmark harness for InferenceWall AI application firewall"
license = { text = "Apache-2.0" }
dependencies = [
    "inferwall>=0.1.5",
    "datasets>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inferwall_bench"]

[tool.ruff]
target-version = "py310"
